lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itdt-service
  labels:
    app: lab3
spec:
  type: NodePort
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
