lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
  labels:
    app: lab3
spec:
  tls:
  - hosts:
    - anyaoi-lab3.ru
    secretName: itdt-tls
  rules:
  - host: anyaoi-lab3.ru
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: itdt-service
              port:
                number: 3000
