lab3/lab3.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: lab3

---

apiVersion: v1
kind: Service
metadata:
  name: lab3-service
  namespace: lab3
  labels:
    app: lab3
spec:
  selector:
    app: lab3
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 3000
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingr
  namespace: lab3
  labels:
    app: lab3
spec:
  tls:
  - hosts:
      - anyaoi-lab3.ru
    secretName: lab3-tls
  rules:
   - host: anyaoi-lab3.ru
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: lab3-service
                port:
                  number: 8200
